--- a/style.scss
+++ b/style.scss
@@ -4,23 +4,46 @@
 }
 
 body{
+    height: 100vh;
     text-align: center;
     transition: all .5s ease-in-out;
-    .time{
-        h1{
-            font-size: 3rem;
-            margin: 0;
-            text-transform: uppercase;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    .page-container{
+        display: flex;
+        flex-direction: column;
+        .time{
+            h1{
+                font-size: 1.5rem;
+                margin: 0;
+                text-transform: uppercase;
+            }
+            p{
+                margin: 0;
+                font-size: 6rem;
+                padding: 0 .5em;
+            }
         }
-        p{
-            margin: 0;
-            font-size: 10rem;
-            padding: 0 .5em;
-        }
-    }
-    .theme{
-        h2{
-            display: inline-block;
+        .theme{
+            h2{
+                display: inline-block;
+            }
         }
     }
 }
+
+@media(min-width: 600px){
+    html{
+        font-size: 26px;
+    }
+}
+
+@media(min-width: 960px){
+    html{
+        font-size: 36px;
+    }
+}
+
+
